<resources>
    <string name="app_name">다모여</string>
    <string name="title_activity_maps">Map</string>

    <string name="guest">guest</string>

    <string name="tv_search">중간지점 탐색</string>

    <string name="msg_default">마커를 움직이세요</string>
    <string name="msg_add">출발지를 지정하려면 +버튼을 누르세요</string>
    <string name="msg_savemarker">"님의 마커가 추가되었습니다."</string>
    <string name="msg_removemarker">"님의 마커가 삭제되었습니다."</string>
    <string name="msg_checkmarker">올바르지 않은 마커가 선택되었습니다.</string>
    <string name="msg_cannotshow">저장된 마커가 없습니다.</string>
    <string name="msg_gps_disable">GPS 기능을 활성화 해주세요</string>

    <string name="category_department_store">백화점</string>
    <string name="category_shopping_mall">쇼핑몰</string>
    <string name="category_stadium">경기장</string>
    <string name="category_zoo">동물원</string>
    <string name="category_museum">박물관</string>
    <string name="category_theater">영화관</string>
    <string name="category_aquarium">아쿠아리움</string>
    <string name="category_cafe">카페</string>
    <string name="category_drink">술집</string>
    <string name="category_restaurant">식당</string>
    <string name="category_etc">기타</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_friends">friends</string>
    <string name="title_chatting">chatting</string>
    <string name="title_setting">setting</string>

    <!-- item direction -->
    <string name="tv_direction_total_time_text">40분</string>
    <string name="tv_direction_walk_time_text">도보 10분</string>
    <string name="tv_direction_divide_text">|</string>
    <string name="tv_direction_cost_text">1,250원</string>
    <string name="timer_finished">Timer Finished!</string>
    <string name="lead_time">소요시간</string>
    <string name="date">날짜</string>

    <!-- item subpath -->
    <string name="tv_transport_no_text">740</string>
    <string name="tv_start_name_text">합정역</string>
    <string name="tv_subpath_how_text">승차</string>
    <string name="tv_arrow_text">  \u003E  </string>
    <string name="tv_end_name_text">신분당선강남역</string>
    <string name="tv_get_off_text">하차</string>
  
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- setting -->
    <string name="settings_account_title">설정</string>
    <string name="settings_connected_account">계정 정보</string>
    <string name="settings_change_interest">관심사 변경</string>
    <string name="settings_version">버전정보</string>
    <string name="settings_email_title">이메일</string>
    <string name="settings_nickname_title">닉네임</string>
</resources>
