<?xml version="1.0" encoding="utf-8"?><android.support.v7.preference.PreferenceScreen    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto">    <android.support.v7.preference.Preference        android:key="connectedAccount"        android:title="@string/settings_connected_account"        android:layout="@layout/pref_content" />    <android.support.v7.preference.Preference        android:key="changeInterest"        android:title="@string/settings_change_interest"        android:layout="@layout/pref_content" />    <android.support.v7.preference.Preference        android:key="appVersion"        android:title="@string/settings_version"        android:layout="@layout/pref_content" /></android.support.v7.preference.PreferenceScreen>